Bug 247384 - WebDriver: [Cocoa] Regression(255359@main) Exception when deleting remote automation session
Summary: WebDriver: [Cocoa] Regression(255359@main) Exception when deleting remote aut...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Inspector (show other bugs)
Version: WebKit Nightly Build
Hardware: All All
: P2 Normal
Assignee: Russell Epstein
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-11-02 15:30 PDT by Patrick Angle
Modified: 2022-11-07 14:57 PST (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Angle 2022-11-02 15:30:07 PDT
<rdar://101872145>
Comment 1 Patrick Angle 2022-11-02 15:45:14 PDT
Pull request: https://github.com/WebKit/WebKit/pull/6058
Comment 2 EWS 2022-11-04 12:49:24 PDT
Committed 256334@main (c46be5c1183b): <https://commits.webkit.org/256334@main>

Reviewed commits have been landed. Closing PR #6058 and removing active labels.
Comment 3 Russell Epstein 2022-11-07 11:50:47 PST
Re-opening for pull request https://github.com/apple/WebKit/pull/186
Comment 4 EWS 2022-11-07 14:57:11 PST
Committed 252432.784@safari-7614-branch (fcfc9e6f2890): <https://commits.webkit.org/252432.784@safari-7614-branch>

Reviewed commits have been landed. Closing PR #186 and removing active labels.